# playground_fastapi

./: pyproject.toml
app/: main.py
database/: supabase.py
