[tool.poetry]
name = "playground-fastapi"
version = "0.1.0"
description = ""
authors = ["KhanDatamarketing <khan@datamarketing.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"
duckdb = "^1.1.3"
supabase = "^2.10.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
